--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,43 +1,58 @@
 @media screen and (max-width:992px){
     body{
-        background-color: purple;
+        background-color: white;
     }
     .marge{
+        padding: 0%;
         align-items: center;
+        margin-top: 2%;
     }
 
 
     .titre{
-        margin-left: -20px;
         width: 15%;
+        padding-left: 30px;
     }
-
+    .onglet{
+        margin: 20px;
+    }
+    .onglet li:hover{
+        border-top: white;
+    }
 
     h1{
-        font-size: 25px;        
-    }
+        font-size: 25px; 
+        padding-left: 20px;
+        }
     .sous-titre{
         font-size: 18px;
-    }
+        padding-left: 20px;
+        }
 
 
     .search-class{
         width: 100%;
+        justify-content: center;
+        }
+    .button-search i{
+        display: none;
     }
 
 
     .filtres-card{
+        padding: 20px;
         display: flex;
         flex-direction: column;
     }
+    .filtres-card h2{
+        padding-left: 20px;
+        }
     .titre-filtre{
         width: 100%;
     }
     .filtres{
         display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 3%;  
-        margin: 3% 5% 0% 5%;
+        /* flex-wrap: wrap;  */ 
     }
     .filtre{
         margin-bottom: 20px;
@@ -48,13 +63,19 @@
     }
 
 
-    .teste{
+    .infobar{
+        padding-left: 20px;
+    }
+
+    .contener-general{
         flex-direction: column-reverse;
+        align-items: center;
     }
 
 
     .contener-hebergements{
-        width: 100%;
+        width: 95%;
+        background-color: white;
     }
     .hebergement-card{
         width: 47%;
@@ -63,20 +84,24 @@
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
+        background-color: white;
     }
     .afficher-button{
-        margin: 0% 0% 5% 6%;
+        display: flex;
+        padding: 0px 0px 50px 15px;
     }
-
-
-
     .contener-populaire{
         width: 100%;
+        border-radius: 0%;
     }
 
 
+    .activite-titre{
+        padding: 20px;
+    }
     .contener-cards-activite{
         flex-wrap: wrap;
+        padding: 20px;
     }
     .contener-sub-cards{
         width: 47%;
@@ -89,7 +114,6 @@
         width: 47%;
         margin-bottom: 20px;
     }
-
     .big{
         height: 85%;
     }
@@ -108,8 +132,6 @@
         width: 100%;
         height: 100px;
     }
-
-
 
 
     footer{
@@ -131,7 +153,7 @@
 
 @media screen and (max-width:767px){
     body{
-        background-color: red;
+        background-color: white;
     }
     header{
         display: flex;
@@ -154,14 +176,20 @@
         width: 30%;
     }
     .onglet{
-        width: 100%;
         justify-content: space-around;
+        margin: 0%;
+        padding-left: 0%;
     }
     .onglet li{
         width: 50%;
         margin: 0%;
         padding-left: 0%;
         text-align: center;
+        border-bottom: 2px solid #fcfcfc;
+        padding-bottom: 8%;
+    }
+    .onglet li:hover{
+        border-bottom: 2px solid #0065fc;
     }
     .button-onglet{
         font-size: 20px;
@@ -170,11 +198,18 @@
 
 
     h1{
-        margin: 5% 10% 2% 20%;
+        display: flex;
+        justify-content: center;
+        width: 95%;
         }
     .sous-titre{
-        margin: 0% 10% 0% 23%;
+        display: flex;
+        justify-content: center;
+        width: 95%;
         font-size: 20px;
+    }
+    .button-search span{
+        display: none;
     }
 
 
@@ -186,36 +221,71 @@
     .button-search{
         width: 20%;
     }
-
+    .button-search i{
+        display: block;
+    }
     
     .filtres-card{
         display: flex;
         flex-direction: column;
     }
     .titre-filtre{
-        margin: -27% 3% 0% 0%;
+        display: flex;
+        justify-content: center;
     }
     .filtres{
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 3%;  
-        margin: 3% 5% 0% 5%;
+        display: flex;
+        align-items: center;
+        width: 100%;
     }
     .filtre{
-        margin: 2% -10% 0% 16%;
+        margin-bottom: 20px;
+        width: 60%;
+    }
+    .button-filtre{
+        justify-content: flex-start;
+        width: 90%;
+    }
+    .button-filtre span{
+        margin-right: 0px;
+    }
+    .first{
+        width: 50%;
+    }
+    .second{
+        width: 45%;
+    }
+    .last{
+        width: 90%;
     }
 
 
-    .teste{
+    .infobar p{
+        padding: 3%;
+    }
+
+
+    .contener-general{
         flex-direction: column-reverse;
     }
 
 
     .infobar{
-        transform: scale(1.2, 1.2);
-        margin: 5% auto 2% auto;
+        width: 95%;
+    }
+    .infobar i{
+        width: 32px;
+        height: 32px;
     }
     
+
+    .contener-general{
+        display: flex;
+        align-items: center;
+    }
 
     .contener-populaire{
         border-radius: 0%;
@@ -223,11 +293,15 @@
     .popular-title{
         font-size: 20px;
     }
-    .contener-populaire-cards{
-        margin-bottom: -10%;
-    }
     .popular-card-content{
         font-size: 20px;
+    }
+    .popular-card img{
+        height: 240px;
+        min-height: 240px;
+    }
+    .contener-populaire-cards {
+        margin-bottom: -15%;
     }
 
 
@@ -235,6 +309,7 @@
         background-color: #ffff;
         flex-direction: row;
         border-radius: 0%;
+        margin-bottom: -20%;
     }
     .contener-hebergements h2{
         margin: 5% 0% 0% 5%;
@@ -245,7 +320,7 @@
         align-content: center;
     }
     .hebergement-card{
-        width: 100%;
+        width: 105%;
         margin: 0% 0% 5% 1%;
     }
     .afficher-button{
@@ -261,7 +336,7 @@
         align-items: center;
     }
     .activite-titre{
-        padding: 0% 75% 0% 5%;
+        padding: 0% 75% 0% 8%;
     }
     .activite-card{
         width: 90%;
@@ -274,6 +349,7 @@
     }  
     .activite-sub-card{
         width: 100%;
+        margin-top: 20px;
      }
     .big{
         width: 100%;
@@ -288,22 +364,11 @@
     }
     
 
-
-
     footer{
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         gap: 35px;
     }
-
-
-
-
-
-
-
-
-
 }
 
