--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,7 +11,7 @@
 
     .titre{
         width: 15%;
-        padding-left: 30px;
+        padding-left: 5px;
     }
     .onglet{
         margin: 20px;
@@ -19,6 +19,10 @@
     .onglet li:hover{
         border-top: white;
     }
+    .onglet li{
+        padding-top: 0%;
+    }
+
 
     h1{
         font-size: 25px; 
@@ -31,11 +35,14 @@
 
 
     .search-class{
-        width: 100%;
-        justify-content: center;
-        }
+        margin-left: 20px;
+        margin-right: 0px;
+    }
     .button-search i{
         display: none;
+    }
+    .search{
+        width: 250px;
     }
 
 
@@ -55,7 +62,6 @@
         /* flex-wrap: wrap;  */ 
     }
     .filtre{
-        margin-bottom: 20px;
         width: 32%;   
      }
     .button-filtre{
@@ -65,6 +71,7 @@
 
     .infobar{
         padding-left: 20px;
+        margin-top: 5px;
     }
 
     .contener-general{
@@ -73,35 +80,71 @@
     }
 
 
+    .contener-populaire{
+        width: 100%;
+        border-radius: 0%;
+        margin-top: 25px;
+        margin-bottom: 0px;
+    }
+    .popular-card-content{
+        font-size: 15px;
+        margin-left: 20px;
+    }
+    .popular-card{
+        margin-bottom: 10px;
+    }
+    .popular-card img{
+        height: 160px;
+        min-height: 160px;
+    }
+    .popular-card .stars{
+        margin-top: -35px;
+    }
+
+
+    .hebergement-title{
+        margin-left: 10px;
+        margin-top: 0px;
+    }
     .contener-hebergements{
         width: 95%;
         background-color: white;
     }
     .hebergement-card{
-        width: 47%;
+        width: 48%;
+        height: 250px;
     }
     .contener-cards{
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
         background-color: white;
+        padding: 0px 10px 0px 10px;
     }
     .afficher-button{
         display: flex;
         padding: 0px 0px 50px 15px;
     }
-    .contener-populaire{
-        width: 100%;
-        border-radius: 0%;
+    .hebergement-card img{
+        height: 120px;
+        min-height: 140px;
+    }
+    .contener-card-center{
+        margin: -20px 0px 0px 15px;
+        padding: 0px;
+    }
+    .afficher-button h3{
+        margin: 0px;
     }
 
 
     .activite-titre{
-        padding: 20px;
+        padding: 20px 0px 0px 30px;
     }
     .contener-cards-activite{
         flex-wrap: wrap;
-        padding: 20px;
+        padding: 10px 30px 0px 30px;
+        margin-bottom: 20px;
     }
     .contener-sub-cards{
         width: 47%;
@@ -111,7 +154,7 @@
     .activite-card{
         background-color: white;
         height: 350px;
-        width: 47%;
+        width: 50%;
         margin-bottom: 20px;
     }
     .big{
@@ -170,10 +213,20 @@
     header nav{
         width: 100%;
     }
+    h1{
+        margin-top: 30px;
+        margin-bottom: 22px;
+        margin-left: 10px;
+    }
     .titre{
         display: flex;
-        padding: 30px;
+        padding: 25px 0px 0px 0px;
         width: 30%;
+        margin-left: 0px;
+    }
+    .titre img{
+        display: flex;
+        justify-content: center
     }
     .onglet{
         justify-content: space-around;
@@ -185,8 +238,9 @@
         margin: 0%;
         padding-left: 0%;
         text-align: center;
-        border-bottom: 2px solid #fcfcfc;
-        padding-bottom: 8%;
+        border-bottom: 2px solid #d9d9d9;
+        padding-bottom: 3%;
+        padding-top: 30px;
     }
     .onglet li:hover{
         border-bottom: 2px solid #0065fc;
@@ -200,13 +254,13 @@
     h1{
         display: flex;
         justify-content: center;
-        width: 95%;
+        width: 80%;
         }
     .sous-titre{
         display: flex;
-        justify-content: center;
-        width: 95%;
-        font-size: 20px;
+        width: 80%;
+        font-size: 18px;
+        margin-left: 10px;
     }
     .button-search span{
         display: none;
@@ -215,11 +269,13 @@
 
     .search-class{
         justify-content: center;
-        padding: 5%;
-        width: auto;
+        width: 90%;
+        margin-left: 20px;
     }
     .button-search{
-        width: 20%;
+        width: 15%;
+        border-radius: 15px;
+        margin: 0px 20px 0px -40px;
     }
     .button-search i{
         display: block;
@@ -228,10 +284,12 @@
     .filtres-card{
         display: flex;
         flex-direction: column;
+        width: 88%;
+        margin-left: 10px;
     }
     .titre-filtre{
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
     }
     .filtres{
         display: flex;
@@ -242,7 +300,7 @@
         width: 100%;
     }
     .filtre{
-        margin-bottom: 20px;
+        margin-bottom: 0px;
         width: 60%;
     }
     .button-filtre{
@@ -259,12 +317,24 @@
         width: 45%;
     }
     .last{
-        width: 90%;
+        width: 73%;
     }
 
 
+    .infobar{
+        width: 90%;
+    }
     .infobar p{
         padding: 3%;
+    } 
+   .infobar{
+        width: 90%;
+        margin-bottom: 25px;
+        margin-left: 10px;
+    }
+    .infobar i{
+        width: 34px;
+        height: 30px;
     }
 
 
@@ -273,15 +343,6 @@
     }
 
 
-    .infobar{
-        width: 95%;
-    }
-    .infobar i{
-        width: 32px;
-        height: 32px;
-    }
-    
-
     .contener-general{
         display: flex;
         align-items: center;
@@ -289,19 +350,28 @@
 
     .contener-populaire{
         border-radius: 0%;
+        margin-bottom: 0%;
     }
     .popular-title{
-        font-size: 20px;
+        font-size: 15px;
     }
     .popular-card-content{
-        font-size: 20px;
+        margin-left: 15px;
+        font-size: 16px;
+        gap: 8%;
     }
     .popular-card img{
-        height: 240px;
-        min-height: 240px;
+        height: 60px;
+        min-height: 160px;
     }
-    .contener-populaire-cards {
-        margin-bottom: -15%;
+    .contener-populaire-cards{
+        margin-bottom: 10%;
+    }
+    .popular-card{
+        margin-bottom: 5px;
+    }
+    .popular-card .stars{
+        margin: 0px;
     }
 
 
@@ -309,10 +379,11 @@
         background-color: #ffff;
         flex-direction: row;
         border-radius: 0%;
-        margin-bottom: -20%;
+        margin-bottom: 15%;
+        margin-top: 5%;
     }
     .contener-hebergements h2{
-        margin: 5% 0% 0% 5%;
+        margin: 5% 0% 3% 5%;
     }
     .contener-cards{
         background-color: #ffff;
@@ -320,11 +391,26 @@
         align-content: center;
     }
     .hebergement-card{
-        width: 105%;
+        width: 95%;
+        height: 205px;
         margin: 0% 0% 5% 1%;
     }
     .afficher-button{
-        visibility: hidden;
+        font-size: 110%;
+        padding: 10px 0px 60px 5px;
+    }
+    .hebergement-card img{
+        height: 60px;
+        min-height: 110px;
+    }
+    .hebergement-card h3{
+        margin: 0% 0% -3% 0%;
+    }
+    .contener-card-center{
+        margin: 0px 0px 0px 15px;
+    }
+    .afficher-button h3{
+        margin-left: 15px;
     }
 
 
@@ -334,16 +420,18 @@
         flex-direction: column;
         background-color: white;
         align-items: center;
+        margin-bottom: 20px;
     }
     .activite-titre{
-        padding: 0% 75% 0% 8%;
+        padding: 0% 0% 0% 7%;
     }
     .activite-card{
-        width: 90%;
-        height: 250px;
+        width: 100%;
+        height: 180px;
+        margin-bottom: 2px;
     }
     .contener-sub-cards{
-        width: 90%;
+        width: 100%;
         align-items: center;
         min-height: 0px;
     }  
@@ -353,14 +441,17 @@
      }
     .big{
         width: 100%;
-        height: 200px;
+        height: 60px;
+        min-height: 120px;
     }
     .ultra-small {
         margin-bottom: 1%;
-        height: 200px;
+        height: 60px;
+        min-height: 120px;
     }
     .small, .medium{
-        height: 200px;
+        height: 60px;
+        min-height: 120px;
     }
     
 
@@ -369,6 +460,7 @@
         flex-wrap: wrap;
         flex-direction: column;
         gap: 35px;
+        margin-bottom: 0px;
     }
 }
 
