--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,14 @@ header{
     margin-top: 0%;
 }
 .titre{
-    width: 10%;
-    margin-left: -35px;
+    width: 6%;
+    margin-left: -5px;
+}
+h1{
+    font-size: 160%;
+}
+.sous-titre{
+    margin-top: -10px;
 }
 
 
@@ -21,6 +27,7 @@ header{
     display: flex;
     align-items: flex-start;
     list-style: none;
+    margin-top: 0%;
 }
 .onglet li{
     border-top: 2px solid white;
@@ -39,9 +46,6 @@ header{
 .button-onglet:hover{
     color: #0065FC;
 }
-
-
-
 
 
 .search-class{
@@ -64,7 +68,7 @@ header{
     align-items: center;
 }
 .search{
-    width: 332px;
+    width: 255px;
     height: 49px;
     border: 1px solid #f2f2f2;
 }
@@ -77,7 +81,6 @@ header{
     height: 53px;
     background-color: #0065FC;
     text-align: center;
-    width: 200px;
     cursor: pointer;
     border-radius: 0px 15px 15px 0px;
     color: white;
@@ -94,14 +97,13 @@ header{
     align-items: center;
 }
 .filtres-card h2{
-    margin: 2% 3% 0% 0%;}
+    margin: 1% 2% 0% 0%;}
 .filtres{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 2%;
     width: 100%;
-    margin-top: 39px;
 }
 .button-filtre i{
     background-color: #dfecff;
@@ -116,10 +118,10 @@ header{
 }
 .button-filtre{
     gap: 10%;
-    border: 1px solid #f2f2f2;
+    border: 1px solid #d9d9d9;
     border-radius: 30px 30px 30px 30px;
     width: 226px;
-    height: 54px;  
+    height: 51px;  
     background-color: white; 
     color: black;
     display: flex;
@@ -135,7 +137,6 @@ header{
 .filtre{
     margin-top: 20px;
 }
-
 
 
 .infobar{
@@ -162,6 +163,7 @@ header{
 .contener-general{
     display: flex;
     justify-content: space-between;
+    margin-bottom: -85px;
 }
 .contener-hebergements{
     width: 64%;
@@ -169,7 +171,7 @@ header{
     background-color: #f2f2f2;
     border-radius: 20px;
     margin-top: 39px;
-    margin-bottom: 3%;
+    margin-bottom: 7%;
 }
 .hebergement-title{
     margin-top: 40px;
@@ -180,14 +182,14 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 40px;
+    padding: 10px 40px 0px 40px;
 }
 .hebergement-card {
     color: black;
     text-decoration: none;
     margin-bottom: 20px;
     border: 1px solid #fcfcfc;
-    border-radius: 10px;
+    border-radius: 20px;
     width: 30%;
     background-color: #fcfcfc;
     /* display: flex; */
@@ -200,10 +202,11 @@ header{
     padding: 0px 20px 20px 10px;
 }
 .hebergement-card img{
-    width: 100%;
+    width: 98%;
     height: 180px;
     object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
+    padding: 3px;
 }
 .fa-star{
     color: #0065FC;  
@@ -212,7 +215,7 @@ header{
     color: #f2f2f2;
 }
 .afficher-button h3{
-    margin: 3% 0% 0% 4%;
+    margin: 2% 0% 0% 4%;
     color: black;
 }
 .afficher-button{
@@ -226,7 +229,7 @@ header{
     background-color: #f2f2f2;
     border-radius: 20px;
     margin-top: 39px;
-    margin-bottom: 3%;
+    margin-bottom: 7%;
 }
 .popular-title{
     display: flex;
@@ -244,20 +247,20 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 30px 0px 100px 0px;
+    margin-bottom: 20px;
 }
 .popular-card{
     color: black;
     text-decoration: none;
     margin-bottom: 20px;
     border: 2px solid #fcfcfc;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: #fcfcfc;
     display: flex;
     -webkit-box-shadow: 5px 5px 12px 2px rgba(0,0,0,0.21); 
     box-shadow: 5px 5px 12px 2px rgba(0,0,0,0.21);
     margin: 10px 33px 37px 33px;
-    padding: 1%;
+    padding: 3px;
 }
 .popular-card img{
     width: 40%;
@@ -266,13 +269,13 @@ header{
     height: 200px;
     min-height: 200px;
     object-fit: cover;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 20px 0px 0px 20px;
 }
 .popular-card-content{
     margin-left: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 35%;
 }
 
 
@@ -288,6 +291,7 @@ header{
     -webkit-box-shadow: 5px 5px 10px -1px rgba(0,0,0,0.51); 
     box-shadow: 5px 5px 10px -1px rgba(0,0,0,0.51);
     text-decoration: none;
+    border-radius: 20px;
 }
 .activite-card h3,.activite-sub-card h3{
     margin-left: 20px;
@@ -300,30 +304,31 @@ header{
     -webkit-box-shadow: 5px 5px 10px -1px rgba(0,0,0,0.51); 
     box-shadow: 5px 5px 10px -1px rgba(0,0,0,0.51);
     text-decoration: none;
+    border-radius: 20px;
 }
 .big{
     width: 100%;
     height: 550px;
     object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 .medium{
     width: 100%;
     height: 250px;
     object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 .small{
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 .ultra-small{
     width: 100%;
     height: 180px;
     object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 .contener-sub-cards{
     display: flex;
@@ -338,7 +343,7 @@ header{
 footer{
     display : flex;
     background-color: #f2f2f2;
-    padding: 30px 0px 0px 0px;
+    padding: 30px 0px 30px 0px;
     gap: 400px;
 }
 footer h3{
@@ -350,4 +355,7 @@ footer ul{
 footer a{
     color: black;
     text-decoration: none;
+}
+footer li{
+    margin-bottom: 10px;
 }
